--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -189,6 +189,5 @@
     "sdata_limit.-G0": "0 bytes",
     "sdata_limit.-G4": "4 bytes",
     "sdata_limit.-G8": "8 bytes",
-    "mreg_names=32": "fpr abi names",
-    "ppc_microprocessor": "PPC microprocessor"
+    "mreg_names=32": "ABI FPR names"
 }
