--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -188,5 +188,6 @@
     "sdata_limit": "Small data limit",
     "sdata_limit.-G0": "0 bytes",
     "sdata_limit.-G4": "4 bytes",
-    "sdata_limit.-G8": "8 bytes"
+    "sdata_limit.-G8": "8 bytes",
+    "mreg_names=32": "ABI FPR names"
 }
