Added compiler setup for MKW - Untested atm

--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -47,6 +47,7 @@
     "mwcc_40_1051": "4.0 build 1051 (MW 1.6sp1)",
     "mwcc_41_60126": "4.1 build 60126 (GC MW 3.0a3)",
     "mwcc_41_60831": "4.1 build 60831 (GC MW 3.0)",
+    "mwcc_42_127": "4.2 build 127 (Wii MW 1.0) (Patched build 142)",
     "mwcc_42_142": "4.2 build 142 (Wii MW 1.0)",
     "mwcc_43_151": "4.3 build 151 (Wii MW 1.1)",
     "mwcc_43_172": "4.3 build 172 (Wii MW 1.3)",
