--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -8,12 +8,12 @@
     "gcc2.6.3-mipsel": "GCC 2.6.3 (mipsel)",
     "gcc2.7.2-psyq": "gcc 2.7.2 (psyq)",
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
+    "gcc2.7.2sn": "GCC 2.7.2 (SN)",
     "gcc2.8.1": "GCC 2.8.1",
     "gcc2.8.1-psyq": "gcc 2.8.1 (psyq)",
     "gcc2.95.2-psyq": "gcc 2.95.2 (psyq)",
     "ido5.3": "IDO 5.3",
     "ido7.1": "IDO 7.1",
-    "sn64": "SN64",
     "mwcc_20_72": "2.0 build 72 (MW 1.2base)",
     "mwcc_20_79": "2.0 build 79 (MW 1.2sp2)",
     "mwcc_20_82": "2.0 build 82 (MW 1.2sp2p3)",
