--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -8,6 +8,7 @@
     "gcc2.6.3-mipsel": "GCC 2.6.3 (mipsel)",
     "gcc2.7.2-psyq": "gcc 2.7.2 (psyq)",
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
+    "gcc2.7.2sn": "GCC 2.7.2 (SN)",
     "gcc2.8.1": "GCC 2.8.1",
     "gcc2.8.1-psyq": "gcc 2.8.1 (psyq)",
     "gcc2.95.2-psyq": "gcc 2.95.2 (psyq)",
