--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -58,6 +58,8 @@
     "old_agbcc": "old_agbcc",
     "gcc-5370": "GCC 4.0.1 (Xcode 2.5) (C)",
     "gcc-5370-cpp": "GCC 4.0.1 (Xcode 2.5) (C++)",
+    "gcc-5363": "GCC 4.0.1 (Xcode 2.4) (C)",
+    "gcc-5363-cpp": "GCC 4.0.1 (Xcode 2.4) (C++)",
     "gcc-5026": "GCC 4.0.0 (Xcode 2.1) (C)",
     "gcc-5026-cpp": "GCC 4.0.0 (Xcode 2.1) (C++)",
     "gcc3-1041": "GCC 3.1 (Mac OS 10.1.4) (C)",
