--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -56,6 +56,13 @@
     "mwcppc_23": "MWCPPC 2.3 (CodeWarrior Pro 5)",
     "mwcppc_24": "MWCPPC 2.4 (CodeWarrior Pro 6)",
     "old_agbcc": "old_agbcc",
+    "gcc-5370": "GCC 4.0.1 (Xcode 2.5) (C)",
+    "gcc-5370-cpp": "GCC 4.0.1 (Xcode 2.5) (C++)",
+    "gcc-5363": "GCC 4.0.1 (Xcode 2.4) (C)",
+    "gcc-5363-cpp": "GCC 4.0.1 (Xcode 2.4) (C++)",
+    "gcc-5026": "GCC 4.0.0 (Xcode 2.1) (C)",
+    "gcc-5026-cpp": "GCC 4.0.0 (Xcode 2.1) (C++)",
+    "gcc3-1041": "GCC 3.1 (Mac OS 10.1.4) (C)",
     "psyq4.0": "PSYQ4.0 (gcc 2.7.2)",
     "psyq4.1": "PSYQ4.1 (gcc 2.7.2)",
     "psyq4.3": "PSYQ4.3 (gcc 2.8.1)",
