Add Nintendo 3DS platform

--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -1,6 +1,15 @@
 {
     "agbcc": "agbcc",
     "agbccpp": "agbccpp",
+    "armcc_40_771": "4.0 build 771",
+    "armcc_40_821": "4.0 build 821",
+    "armcc_41_561": "4.1 build 561",
+    "armcc_41_713": "4.1 build 713",
+    "armcc_41_921": "4.1 build 921",
+    "armcc_41_1049": "4.1 build 1049",
+    "armcc_41_1440": "4.1 build 1440",
+    "armcc_41_1454": "4.1 build 1454",
+    "armcc_504_82": "5.04 build 82",
     "clang-3.9.1": "Clang 3.9.1",
     "clang-4.0.1": "Clang 4.0.1",
     "dummy": "Dummy",
@@ -67,6 +76,22 @@
     "psyq4.1": "PSYQ4.1 (gcc 2.7.2)",
     "psyq4.3": "PSYQ4.3 (gcc 2.8.1)",
     "psyq4.6": "PSYQ4.6 (gcc 2.95.2)",
+
+    "armcc_opt_level": "Optimization level",
+    "armcc_opt_level.-O0": "No optimization",
+    "armcc_opt_level.-O1": "Some optimization",
+    "armcc_opt_level.-O2": "Standard optimization",
+    "armcc_opt_level.-O3": "Heavy optimization",
+    "armcc_opt_level.-Ospace": "Size optimization",
+    "armcc_opt_level.-Otime": "Speed optimization",
+    "armcc_language": "Language",
+    "armcc_language.--c90": "C90",
+    "armcc_language.--c99": "C99",
+    "armcc_language.--cpp": "C++",
+    "armcc_instset": "Instruction set",
+    "armcc_instset.--arm": "ARM",
+    "armcc_instset.--thumb": "THUMB",
+    "armcc_debug": "Debug information",
 
     "clang_opt_level": "Optimization level",
     "clang_opt_level.-O0": "No optimization",
