--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -25,6 +25,7 @@
     "gcc2.95.2-psyq": "gcc 2.95.2 (psyq)",
     "ido5.3": "IDO 5.3",
     "ido7.1": "IDO 7.1",
+    "ido7.1Pascal": "IDO 7.1 Pascal",
     "mwcc_20_72": "2.0 build 72 (MW 1.2base)",
     "mwcc_20_79": "2.0 build 79 (MW 1.2sp2)",
     "mwcc_20_82": "2.0 build 82 (MW 1.2sp2p3)",
