add PSYQ4.5 compiler (gcc 2.91.66)

--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -16,14 +16,11 @@
     "dummy": "Dummy",
     "ee-gcc2.96": "EE GCC 2.96",
     "gcc2.6.3-mipsel": "GCC 2.6.3 (mipsel)",
-    "gcc2.7.2-psyq": "gcc 2.7.2 (psyq)",
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
     "gcc2.7.2sn": "GCC 2.7.2 (SN)",
     "gcc2.7.2snew": "GCC 2.7.2 (SN, experimental)",
     "gcc2.8.1sn-cxx": "GCC 2.8.1 (SN) (C++)",
     "gcc2.8.1": "GCC 2.8.1",
-    "gcc2.8.1-psyq": "gcc 2.8.1 (psyq)",
-    "gcc2.95.2-psyq": "gcc 2.95.2 (psyq)",
     "ido5.3": "IDO 5.3",
     "ido7.1": "IDO 7.1",
     "ido7.1Pascal": "IDO 7.1 Pascal",
@@ -79,6 +76,7 @@
     "psyq4.0": "PSYQ4.0 (gcc 2.7.2)",
     "psyq4.1": "PSYQ4.1 (gcc 2.7.2)",
     "psyq4.3": "PSYQ4.3 (gcc 2.8.1)",
+    "psyq4.5": "PSYQ4.5 (gcc 2.91.66)",
     "psyq4.6": "PSYQ4.6 (gcc 2.95.2)",
 
     "armcc_opt_level": "Optimization level",
