--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -229,5 +229,6 @@
     "sdata_limit.-G0": "0 bytes",
     "sdata_limit.-G4": "4 bytes",
     "sdata_limit.-G8": "8 bytes",
-    "mreg_names=32": "ABI FPR names"
+    "mreg_names=32": "ABI FPR names",
+    "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels"
 }
