--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -230,5 +230,9 @@
     "sdata_limit.-G4": "4 bytes",
     "sdata_limit.-G8": "8 bytes",
     "mreg_names=32": "ABI FPR names",
-    "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels"
+    "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels",
+
+    "diff_algorithm": "Diff algorithm",
+    "diff_algorithm.-DIFFlevenshtein": "Levenshtein",
+    "diff_algorithm.-DIFFdifflib": "difflib"
 }
