--- a/frontend/locales/en/compilers.json
+++ b/frontend/locales/en/compilers.json
@@ -232,6 +232,7 @@
     "sdata_limit.-G4": "4 bytes",
     "sdata_limit.-G8": "8 bytes",
     "mreg_names=32": "ABI FPR names",
+    "mno_aliases": "Disable pseudo instructions",
     "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels",
 
     "diff_algorithm": "Diff algorithm",
