--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -24,6 +24,7 @@
     "ido5.3": "IDO 5.3",
     "ido7.1": "IDO 7.1",
     "ido5.3_irix": "IDO 5.3",
+    "ido5.3Pascal": "IDO 5.3 Pascal",
     "ido7.1_irix": "IDO 7.1",
     "ido7.1Pascal": "IDO 7.1 Pascal",
     "mwcc_20_72": "2.0 build 72 (MW 1.2base)",
