--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -15,8 +15,19 @@
     "clang-4.0.1": "Clang 4.0.1",
     "dummy": "Dummy",
     "ee-gcc2.9-990721": "EE GCC 2.9 build 990721",
+    "ee-gcc2.9-991111": "EE GCC 2.9 build 991111",
+    "ee-gcc2.95.2-273a": "EE GCC 2.95.2 (SN BUILD v2.73a)",
+    "ee-gcc2.95.2-274": "EE GCC 2.95.2 (SN BUILD v2.74)",
+    "ee-gcc2.95.3-107": "EE GCC 2.95.3 (SN BUILD v1.07)",
+    "ee-gcc2.95.3-114": "EE GCC 2.95.3 (SN BUILD v1.14)",
+    "ee-gcc2.95.3-136": "EE GCC 2.95.3 (SN BUILD v1.36)",
     "ee-gcc2.96": "EE GCC 2.96 build 001003-1",
     "ee-gcc3.2-040921": "EE GCC 3.2 build 040921",
+    "mwcps2-2.3-991202": "MWCPS2 2.3",
+    "mwcps2-3.0b22-011126": "MWCPS2 3.0b22 (Built 011126)",
+    "mwcps2-3.0b22-020123": "MWCPS2 3.0b22 (Built 020123)",
+    "mwcps2-3.0b22-020716": "MWCPS2 3.0b22 (Built 020716)",
+    "mwcps2-3.0b22-020926": "MWCPS2 3.0b22 (Built 020926)",
     "egcs_1.1.2-4": "EGCS 1.1.2-4 (gcc egcs-2.91.66)",
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
     "gcc2.7.2sn": "GCC 2.7.2 (SN)",
