Adding QEMU_IRIX with IDO6.0 (sample) (#693)
* Adding a Wave Race 64 Preset

* Update compilers.py

Adding an AeroGauge JP Kiosk Demo preset

* Update compilers.py

* Adding ido6.0

* irix binfmt

* adding qemu-irix

* updating url

* Update ci.yml

* Update ci.yml

ah

* Update ci.yml

* Update ci.yml

* updating

* Update ci.yml

* Testing binfmt (again)

* Binfmt test

* Update ci.yml

* Update ci.yml

* ido6.0 package

* Update download.py

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* again

* Update compilers.py

* commit

* Update compilers.py

* a

* docker

* fix

* other commit

* aaa

* update

* commit

* oops

* systemd

* systemd commit

* a

* ff

* other commit

* Update download.py

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update compiler_wrapper.py

* Update Dockerfile

* Update ci.yml

* updating

* update

* binfmt

* finishing

* oops

* ah

* finishing

* Another test (final maybe?)

* final commit 100% real no fake

* another commit

* ?

* a

* is this the final commit?

* more tests

* Update compilers.py

* checking if ido_root exists

* updating QEMU_IRIX env

* Update ci.yml

* Update compiler_wrapper.py

* Update Dockerfile

* Update ci.yml

* Update ci.yml

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update ci.yml

* test

* testing

* test

* final test

* black?

* update

* closing

* impl

* oops

* black

* update

* update

* fix black problem

* oops

* ooops

* Making more simple

* cleaning

* Update compilers.py

* Update ci.yml

* Update Dockerfile

* flag

* Remove QEMU_IRIX var

* delete qemu-user line

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -35,6 +35,8 @@
     "gcc2.8.1sn-cxx": "GCC 2.8.1 (SN) (C++)",
     "gcc2.8.1": "GCC 2.8.1",
     "ido5.3_irix": "IDO 5.3",
+    "ido6.0_irix": "IDO 6.0",
+    "ido6.0": "IDO 6.0",
     "ido7.1_irix": "IDO 7.1",
     "ido5.3": "IDO 5.3",
     "ido5.3Pascal": "IDO 5.3 Pascal",
@@ -239,6 +241,7 @@
     "gcc_char_type.-funsigned-char": "char will be unsigned",
     "mips_version": "Mips version",
     "kpic": "-non_shared if unchecked",
+    "pass": "Print the compiler passes",
     "endianness": "Endianness",
     "endianness.-mel": "Little endian",
     "endianness.-meb": "Big endian",
