--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -35,11 +35,13 @@
     "gcc2.8.1sn-cxx": "GCC 2.8.1 (SN) (C++)",
     "gcc2.8.1": "GCC 2.8.1",
     "ido5.3_irix": "IDO 5.3",
+    "ido5.3_c++": "IDO5.3 C++",
     "ido6.0_irix": "IDO 6.0",
     "ido6.0": "IDO 6.0",
     "ido7.1_irix": "IDO 7.1",
     "ido5.3": "IDO 5.3",
     "ido5.3Pascal": "IDO 5.3 Pascal",
+    "ido5.3_c++_irix": "IDO5.3 C++",
     "ido7.1": "IDO 7.1",
     "ido7.1Pascal": "IDO 7.1 Pascal",
     "mwcc_20_72": "2.0 build 72 (MW 1.2base)",
