--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -15,6 +15,7 @@
     "clang-4.0.1": "Clang 4.0.1",
     "clang-8.0.0": "Clang 8.0.0",
     "dummy": "Dummy",
+    "dummy_longrunning": "Dummy (long-running)",
     "ee-gcc2.9-990721": "EE GCC 2.9 build 990721",
     "ee-gcc2.9-991111": "EE GCC 2.9 build 991111",
     "ee-gcc2.95.2-273a": "EE GCC 2.95.2 (SN BUILD v2.73a)",
