--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -40,6 +40,7 @@
     "ido5.3_irix": "IDO 5.3",
     "ido5.3_c++_irix": "IDO 5.3 C++",
     "ido6.0_irix": "IDO 6.0",
+    "mips_pro_744_irix": "MIPS Pro 7.4.4",
     "ido6.0": "IDO 6.0",
     "ido7.1_irix": "IDO 7.1",
     "ido5.3": "IDO 5.3",
@@ -47,6 +48,7 @@
     "ido5.3Pascal": "IDO 5.3 Pascal",
     "ido7.1": "IDO 7.1",
     "ido7.1Pascal": "IDO 7.1 Pascal",
+    "mips_pro_744": "MIPS Pro 7.4.4",
     "mwcc_20_72": "2.0 build 72 (MW 1.2base)",
     "mwcc_20_79": "2.0 build 79 (MW 1.2sp2)",
     "mwcc_20_82": "2.0 build 82 (MW 1.2sp2p3)",
