--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -106,6 +106,8 @@
     "psyq4.5": "PSYQ4.5 (gcc 2.91.66)",
     "psyq4.6": "PSYQ4.6 (gcc 2.95.2)",
 
+    "cygnus-2.7-96Q3": "cygnus-2.7-96Q3 SOA-960904",
+
     "armcc_opt_level": "Optimization level",
     "armcc_opt_level.-O0": "No optimization",
     "armcc_opt_level.-O1": "Some optimization",
