--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -38,6 +38,7 @@
     "gcc2.8.1": "GCC 2.8.1",
     "gcc4.4.0-mips64-elf": "GCC 4.4.0 (mips64-elf)",
     "ido5.3_irix": "IDO 5.3",
+    "ido5.3_asm_irix": "IDO 5.3 AS",
     "ido5.3_c++_irix": "IDO 5.3 C++",
     "ido6.0_irix": "IDO 6.0",
     "mips_pro_744_irix": "MIPS Pro 7.4.4",
