Add ee-gcc2.9-991111-01 compiler

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -19,6 +19,7 @@
     "dummy_longrunning": "Dummy (long-running)",
     "ee-gcc2.9-990721": "EE GCC 2.9 build 990721",
     "ee-gcc2.9-991111": "EE GCC 2.9 build 991111",
+    "ee-gcc2.9-991111-01": "EE GCC 2.9 build 991111-01",
     "ee-gcc2.95.2-273a": "EE GCC 2.95.2 (SN BUILD v2.73a)",
     "ee-gcc2.95.2-274": "EE GCC 2.95.2 (SN BUILD v2.74)",
     "ee-gcc2.95.3-107": "EE GCC 2.95.3 (SN BUILD v1.07)",
