--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -109,6 +109,14 @@
     "psyq4.3": "PSYQ4.3 (gcc 2.8.1)",
     "psyq4.5": "PSYQ4.5 (gcc 2.91.66)",
     "psyq4.6": "PSYQ4.6 (gcc 2.95.2)",
+    "wcc10.5": "Watcom Optimizing C i386 Compiler 10.5",
+    "wpp10.5": "Watcom Optimizing C++ i386 Compiler 10.5",
+    "wcc10.5a": "Watcom Optimizing C i386 Compiler 10.5a",
+    "wpp10.5a": "Watcom Optimizing C++ i386 Compiler 10.5a",
+    "wcc10.6": "Watcom Optimizing C i386 Compiler 10.6",
+    "wpp10.6": "Watcom Optimizing C++ i386 Compiler 10.6",
+    "wcc11.0": "Watcom Optimizing C i386 Compiler 11.0",
+    "wpp11.0": "Watcom Optimizing C++ i386 Compiler 11.0",
 
     "cygnus-2.7-96Q3": "cygnus-2.7-96Q3 SOA-960904",
 
@@ -248,6 +256,41 @@
     "psyq_debug_level.-g1": "Minimal trace info",
     "psyq_debug_level.-g2": "Local variable tracking",
     "psyq_debug_level.-g3": "Macro expansions",
+
+    "watcom_codegen": "Code generation",
+    "watcom_codegen.-0": "Optimize for i086",
+    "watcom_codegen.-1": "Optimize for i186",
+    "watcom_codegen.-2": "Optimize for i286",
+    "watcom_codegen.-3r": "Optimize for i386 pass by register",
+    "watcom_codegen.-3s": "Optimize for i386 pass by stack",
+    "watcom_codegen.-4r": "Optimize for i486 pass by register",
+    "watcom_codegen.-4s": "Optimize for i486 pass by stack",
+    "watcom_codegen.-5r": "Optimize for Pentium pass by register",
+    "watcom_codegen.-5s": "Optimize for Pentium pass by stack",
+    "watcom_codegen.-6r": "Optimize for Pentium Pro pass by register",
+    "watcom_codegen.-6s": "Optimize for Pentium Pro pass by stack",
+    "watcom_platform": "Target operating system",
+    "watcom_platform.-bt=nt": "Windows 9x/NT",
+    "watcom_platform.-bt=dos": "MS DOS",
+    "watcom_disable_opt": "Disable optimizations",
+    "watcom_favour_space": "Optimize for size",
+    "watcom_favour_perf": "Optimize for speed",
+    "watcom_nostackchk": "Remove stack overflow checks",
+    "watcom_packing": "Set minimal structure packing (member alignment)",
+    "watcom_packing.-zp1": "Pack to 1 byte",
+    "watcom_packing.-zp2": "Pack to 2 bytes",
+    "watcom_packing.-zp4": "Pack to 4 bytes",
+    "watcom_packing.-zp8": "Pack to 8 bytes",
+    "watcom_signedchar": "Change char default from unsigned to signed",
+    "watcom_fpu": "Generate in-line 387 instructions",
+    "watcom_stack_frames": "Generate traceable stack frames",
+    "watcom_instr_sched": "Optimize instruction scheduling",
+    "watcom_inline_lib": "Inline suitable library functions",
+    "watcom_loop_opt": "Perform loop optimizations",
+    "watcom_inline_fpu": "Inline suitable math functions",
+    "watcom_fpu_recip": "Replace fpu div with reciprocal mult",
+    "watcom_fpu_result": "Force fpu intermediate result to memory",
+
 
     "gcc_char_type": "Char type",
     "gcc_char_type.-fsigned-char": "char will be signed",
