Implements Linux platform and RH8 compiler.

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -182,6 +182,7 @@
     "gcc_debug_level.-gdwarf": "DWARF debug info (for SN64, should not affect codegen)",
     "gcc_debug_level.-gdwarf-2": "DWARF 2 debug info (should not affect codegen)",
     "gcc_force_addr": "Force memory address constants to be copied into registers before doing arithmetic on them",
+    "gcc_omit_frame_ptr": "Omits the storing of stack frame pointers during function calls",
 
     "ido_opt_level": "Optimization level",
     "ido_opt_level.-O0": "No optimization",
