--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -62,6 +62,7 @@
     "mwcc_233_159": "2.3.3 build 159 (GC MW 1.1)",
     "mwcc_233_163": "2.3.3 build 163 (GC MW 1.2.5)",
     "mwcc_233_163e": "2.3.3 build 163 (GC MW 1.2.5e)",
+    "mwcc_233_163n": "2.3.3 build 163 (GC MW 1.2.5n)",
     "mwcc_242_81": "2.4.2 build 81 (GC MW 1.3.2)",
     "mwcc_247_105": "2.4.7 build 105 (GC MW 2.5)",
     "mwcc_247_107": "2.4.7 build 107 (GC MW 2.6)",
