--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -38,6 +38,7 @@
     "gcc2.7.2sn": "GCC 2.7.2 (SN)",
     "gcc2.7.2snew": "GCC 2.7.2 (SN, experimental)",
     "gcc2.8.1sn-cxx": "GCC 2.8.1 (SN) (C++)",
+    "gcc2.8.0": "GCC 2.8.0",
     "gcc2.8.1": "GCC 2.8.1",
     "gcc4.4.0-mips64-elf": "GCC 4.4.0 (mips64-elf)",
     "ido5.3_irix": "IDO 5.3",
