--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -37,9 +37,11 @@
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
     "gcc2.7.2sn": "GCC 2.7.2 (SN)",
     "gcc2.7.2snew": "GCC 2.7.2 (SN, experimental)",
+    "gcc2.8.1sn": "GCC 2.8.1 (SN)",
     "gcc2.8.1sn-cxx": "GCC 2.8.1 (SN) (C++)",
     "gcc2.8.0": "GCC 2.8.0",
     "gcc2.8.1": "GCC 2.8.1",
+    "gcc2.8.1pm": "GCC 2.8.1 (Paper Mario)",
     "gcc4.4.0-mips64-elf": "GCC 4.4.0 (mips64-elf)",
     "ido5.3_irix": "IDO 5.3",
     "ido5.3_asm_irix": "IDO 5.3 AS",
