Add psyq3.3 + psyq4.4 and migrate psyq4.3 scratches to psyq4.4

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -130,13 +130,15 @@
     "gcc2.91.66-mipsel": "gcc 2.91.66 + maspsx",
     "gcc2.95.2-mipsel": "gcc 2.95.2 + maspsx",
 
+    "psyq3.3": "PSYQ3.3 (gcc 2.6.0 + aspsx 2.21)",
     "psyq3.5": "PSYQ3.5 (gcc 2.6.0 + aspsx 2.34)",
     "psyq3.6": "PSYQ3.6 (gcc 2.6.3 + aspsx 2.34)",
-    "psyq4.0": "PSYQ4.0 (gcc 2.7.2)",
-    "psyq4.1": "PSYQ4.1 (gcc 2.7.2)",
-    "psyq4.3": "PSYQ4.3 (gcc 2.8.1)",
-    "psyq4.5": "PSYQ4.5 (gcc 2.91.66)",
-    "psyq4.6": "PSYQ4.6 (gcc 2.95.2)",
+    "psyq4.0": "PSYQ4.0 (gcc 2.7.2 + aspsx 2.56)",
+    "psyq4.1": "PSYQ4.1 (gcc 2.7.2 + aspsx 2.67)",
+    "psyq4.3": "PSYQ4.3 (gcc 2.8.0 + aspsx 2.77)",
+    "psyq4.4": "PSYQ4.4 (gcc 2.8.1 + aspsx 2.79)",
+    "psyq4.5": "PSYQ4.5 (gcc 2.91.66 + aspsx 2.81)",
+    "psyq4.6": "PSYQ4.6 (gcc 2.95.2 + aspsx 2.86)",
 
     "wcc10.5": "Watcom Optimizing C i386 Compiler 10.5",
     "wpp10.5": "Watcom Optimizing C++ i386 Compiler 10.5",
