--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -149,6 +149,11 @@
 
     "psyq4.4-ccpsx": "CCPSX (PSYQ4.4: gcc 2.8.1 + aspsx 2.79)",
 
+    "mwccpsp_3.0.1_121": "MWCC 1.0 (3.0.1 121)",
+    "mwccpsp_3.0.1_147": "MWCC 1.1 (3.0.1 147)",
+    "mwccpsp_3.0.1_151": "MWCC 1.1 SP1 (3.0.1 151)",
+    "pspsnc_1.2.7503.0": "SN 1.2.7503.0",
+
     "wcc10.5": "Watcom Optimizing C i386 Compiler 10.5",
     "wpp10.5": "Watcom Optimizing C++ i386 Compiler 10.5",
     "wcc10.5a": "Watcom Optimizing C i386 Compiler 10.5a",
