Correct mislabeled mwcps2 compilers (#1148)
* Correct mislabeled mwcps2 compilers

* dont reformat compilers.json

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -28,10 +28,10 @@
     "ee-gcc2.95.3-136": "EE GCC 2.95.3 (SN BUILD v1.36)",
     "ee-gcc2.96": "EE GCC 2.96 build 001003-1",
     "ee-gcc3.2-040921": "EE GCC 3.2 build 040921",
-    "mwcps2-2.3-991202": "MWCPS2 2.3",
-    "mwcps2-3.0b22-011126": "MWCPS2 3.0b22 (Built 011126)",
-    "mwcps2-3.0b22-020123": "MWCPS2 3.0b22 (Built 020123)",
-    "mwcps2-3.0b22-020716": "MWCPS2 3.0b22 (Built 020716)",
+    "mwcps2-2.3-991202": "MWCPS 2.3 (Built 991202)",
+    "mwcps2-3.0-011126": "MWCPS 3.0 (Built 011126)",
+    "mwcps2-3.0.1-020123": "MWCPS 3.0.1 (Built 020123)",
+    "mwcps2-3.0.3-020716": "MWCPS 3.0.3 (Built 020716)",
     "mwcps2-3.0b22-020926": "MWCPS2 3.0b22 (Built 020926)",
     "egcs_1.1.2-4": "EGCS 1.1.2-4 (gcc egcs-2.91.66)",
     "gcc2.7.2kmc": "GCC 2.7.2 (KMC)",
