--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -271,9 +271,9 @@
     "mwcc_char_signedness.-char signed": "Signed",
     "mwcc_char_signedness.-char unsigned": "Unsigned",
     "mwcc_cpp_exceptions_off": "Disable C++ exceptions",
-    "mwcc_enum_width": "Specify size for enums",
-    "mwcc_enum_width.-enum int": "Use int-sized enums; default",
-    "mwcc_enum_width.-enum min": "Use minimum-sized enums",
+    "mwcc_enum_size": "Specify size for enums",
+    "mwcc_enum_size.-enum int": "Use int-sized enums; default",
+    "mwcc_enum_size.-enum min": "Use minimum-sized enums",
     "mwcc_rostr": "Make string constants read-only",
     "mwcc_rtti_off": "Disable run-time typing information (for C++)",
     "mwcc_enc_sjis": "Specifies SJIS source encoding",
