--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -374,7 +374,12 @@
     "sdata_limit.-G0": "0 bytes",
     "sdata_limit.-G4": "4 bytes",
     "sdata_limit.-G8": "8 bytes",
-    "mreg_names=32": "ABI FPR names",
+    "mips_mreg_names": "ABI for register names",
+    "mips_mreg_names.": "Default",
+    "mips_mreg_names.-Mreg-names=32": "ABI O32",
+    "mips_mreg_names.-Mreg-names=n32": "ABI N32 and EABI",
+    "mips_mreg_names.-Mreg-names=64": "ABI N64",
+    "mips_mreg_names.-Mreg-names=numeric": "Numeric registers",
     "mno_aliases": "Disable pseudo instructions",
     "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels",
 
