Add Show function symbols in diff option (#1182)
* Add Show function symbols in diff option

* Update asm-differ

* Rename frontend option

---------

Co-authored-by: 1superchip <1superchip@gmail.com>

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -384,6 +384,7 @@
     "mips_mreg_names.-Mreg-names=numeric": "Numeric registers",
     "mno_aliases": "Disable pseudo instructions",
     "no_show_rodata_refs": "Hide rodata refs in diff, e.g. jtbl labels",
+    "diff_function_symbols": "Include function labels in diff",
 
     "diff_algorithm": "Diff algorithm",
     "diff_algorithm.-DIFFlevenshtein": "Levenshtein",
