Adding more MWCC Wii/GC compilers

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -100,12 +100,19 @@
     "mwcc_40_1034": "4.0 build 1034 (MW 1.3)",
     "mwcc_40_1036": "4.0 build 1036 (MW 1.3p1)",
     "mwcc_40_1051": "4.0 build 1051 (MW 1.6sp1)",
+    "mwcc_41_51213": "4.1 build 51213 (GC MW 3.0a3)",
     "mwcc_41_60126": "4.1 build 60126 (GC MW 3.0a3)",
+    "mwcc_41_60209": "4.1 build 60209 (GC MW 3.0a3.3)",
+    "mwcc_42_60308": "4.2 build 60308 (GC MW 3.0a3.4)",
+    "mwcc_42_60422": "4.2 build 60422 (GC MW 3.0a5)",
     "mwcc_41_60831": "4.1 build 60831 (GC MW 3.0)",
     "mwcc_42_127": "4.2 build 127 (Patched 142 build)",
+    "mwcc_42_140": "4.2 build 140 (Wii MW 1.0RC1)",
     "mwcc_42_142": "4.2 build 142 (Wii MW 1.0)",
+    "mwcc_43_145": "4.3 build 145 (Wii MW 1.0)",
     "mwcc_43_151": "4.3 build 151 (Wii MW 1.1)",
     "mwcc_43_172": "4.3 build 172 (Wii MW 1.3)",
+    "mwcc_43_188": "4.3 build 188 (Wii MW 1.5)",
     "mwcc_43_213": "4.3 build 213 (Wii MW 1.7)",
     "mwcppc_23": "MWCPPC 2.3 (CodeWarrior Pro 5)",
     "mwcppc_24": "MWCPPC 2.4 (CodeWarrior Pro 6)",
