More MWCCPSP compilers (#1241)
* More MWCCPSP compilers

* Forgot to actually add the compilers to the list of compilers...

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -185,6 +185,12 @@
     "mwccpsp_3.0.1_139": "MWCC 1.0 Hotfix 3 (3.0.1 139)",
     "mwccpsp_3.0.1_147": "MWCC 1.1 (3.0.1 147)",
     "mwccpsp_3.0.1_151": "MWCC 1.1 SP1 (3.0.1 151)",
+    "mwccpsp_3.0.1_180": "MWCC 1.2 (3.0.1 180)",
+    "mwccpsp_3.0.1_192": "MWCC 1.2 SP3 (3.0.1 192)",
+    "mwccpsp_3.0.1_201": "MWCC 1.3 (3.0.1 201)",
+    "mwccpsp_3.0.1_205": "MWCC 1.3 SP1 (3.0.1 205)",
+    "mwccpsp_3.0.1_210": "MWCC 1.3 SP2 (3.0.1 210)",
+    "mwccpsp_3.0.1_219": "MWCC 1.3 SP7 (3.0.1 219)",
     "pspsnc_1.2.7503.0": "SN 1.2.7503.0",
     "psp-gcc-1.3.1": "GCC 3.3.3+allegrex-2.2.1-psp-1.3.1",
 
