Even more metrowerks ps2 compilers

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -39,10 +39,15 @@
     "mwcps2-3.0.1-020123": "MWCPS 3.0.1 (Built 020123)",
     "mwcps2-3.0.3-020716": "MWCPS 3.0.3 (Built 020716)",
     "mwcps2-3.0b22-020926": "MWCPS2 3.0b22 (Built 020926)",
+    "mwcps2-3.0b38-030307": "MWCPS2 3.0b38 (Built 030307)",
+    "mwcps2-3.0b50-030527": "MWCPS2 3.0b50 (Built 030527)",
     "mwcps2-3.0b52-030722": "MWCPS2 3.0b52 (Built 030722)",
+    "mwcps2-3.0.1b44-030325": "MWCPS2 3.0.1b44 (Built 030325)",
     "mwcps2-3.0.1b74-030811": "MWCPS2 3.0.1b74 (Built 030811)",
+    "mwcps2-3.0.1b75-030916": "MWCPS2 3.0.1b75 (Built 030916)",
     "mwcps2-3.0.1b87-031208": "MWCPS2 3.0.1b87 (Built 031208)",
     "mwcps2-3.0.1b95-040309": "MWCPS2 3.0.1b95 (Built 040309)",
+    "mwcps2-3.0.1b103-040528": "MWCPS2 3.0.1b103 (Built 040528)",
     "mwcps2-3.0.1b119-040914": "MWCPS2 3.0.1b119 (Built 040914)",
     "mwcps2-3.0.1b145-050209": "MWCPS2 3.0.1b145 (Built 050209)",
     "mwcps2-3.0.1b151-050317": "MWCPS2 3.0.1b151 (Built 050317)",
