Add missing migration & compiler names

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -34,10 +34,12 @@
     "ee-gcc2.96": "EE GCC 2.96 build 001003-1",
     "ee-gcc3.2-040921": "EE GCC 3.2 build 040921",
 
-    "mwcps2-2.3-991202": "MWCPS 2.3 (Built 991202)",
-    "mwcps2-3.0-011126": "MWCPS 3.0 (Built 011126)",
-    "mwcps2-3.0.1-020123": "MWCPS 3.0.1 (Built 020123)",
-    "mwcps2-3.0.3-020716": "MWCPS 3.0.3 (Built 020716)",
+    "mwcps2-2.3-991202": "MWCPS2 2.3 (Built 991202)",
+    "mwcps2-2.3.3-000906": "MWCPS2 2.3.3 (Built 000906)",
+    "mwcps2-2.4-001213": "MWCPS2 2.4 (Built 001213)",
+    "mwcps2-3.0-011126": "MWCPS2 3.0 (Built 011126)",
+    "mwcps2-3.0.1-020123": "MWCPS2 3.0.1 (Built 020123)",
+    "mwcps2-3.0.3-020716": "MWCPS2 3.0.3 (Built 020716)",
     "mwcps2-3.0b22-020926": "MWCPS2 3.0b22 (Built 020926)",
     "mwcps2-3.0b38-030307": "MWCPS2 3.0b38 (Built 030307)",
     "mwcps2-3.0b50-030527": "MWCPS2 3.0b50 (Built 030527)",
