Add missing translation for mwcps2-3.0.1b51-030512

--- a/frontend/src/lib/i18n/locales/en/compilers.json
+++ b/frontend/src/lib/i18n/locales/en/compilers.json
@@ -45,6 +45,7 @@
     "mwcps2-3.0b50-030527": "MWCPS2 3.0b50 (Built 030527)",
     "mwcps2-3.0b52-030722": "MWCPS2 3.0b52 (Built 030722)",
     "mwcps2-3.0.1b44-030325": "MWCPS2 3.0.1b44 (Built 030325)",
+    "mwcps2-3.0.1b51-030512": "MWCPS2 3.0.1b51 (Built 030512)",
     "mwcps2-3.0.1b74-030811": "MWCPS2 3.0.1b74 (Built 030811)",
     "mwcps2-3.0.1b75-030916": "MWCPS2 3.0.1b75 (Built 030916)",
     "mwcps2-3.0.1b87-031208": "MWCPS2 3.0.1b87 (Built 031208)",
